# cc_code_bits

./: README.md
debug_time/: CMakeLists.txt  debug_time.cc  debug_time.hh  main.cc
debug_zmq/: CMakeLists.txt  main.cc
japanese_numbers/: jp_numbers.py
macros/: cb_macros.cc
msgpack/messages/: CMakeLists.txt
msgpack/messages/publisher/: publisher.cc
msgpack/messages/subscriber/: subscriber.cc
msgpack/visitors/: CMakeLists.txt  gaze_visitor.cc  gaze_visitor.hh  main.cc  pupil_visitor.cc  pupil_visitor.hh  ros_types.cc  ros_types.hh
opencl/: CMakeLists.txt
opencl/include/: cl_utils.hpp
opencl/src/: copy_image.cpp  set_id.cpp  set_id_image.cpp
opencv/markers_detection/: CMakeLists.txt
opencv/markers_detection/include/detectors/: colored_marker.hh  detectors.hh
opencv/markers_detection/src/: main.cc
opencv/markers_detection/src/detectors/: colored_marked.cc
stringhash/: CMakeLists.txt  main.cc
